# DeepFilterNet

./: pyproject.toml
DeepFilterNet/: pyproject.toml  requirements.txt
