[tool.poetry]
name = "DeepFilterNet"
version = "0.5.7-pre"
description = "Noise supression using deep filtering"
authors = ["Hendrik Schröter"]
repository = "https://github.com/Rikorose/DeepFilterNet"
keywords = ["noise reduction", "neural network"]
classifiers = [
  "Topic :: Multimedia :: Sound/Audio :: Speech",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "Topic :: Utilities",
  "Programming Language :: Rust",
  "Programming Language :: Python",
]
license = "MIT"
packages = [{ include = "df" }]
include = [
  { path = "pretrained_models/DeepFilterNet/config.ini" },
  { path = "pretrained_models/DeepFilterNet/checkpoints/*" },
  { path = "pretrained_models/DeepFilterNet2/config.ini" },
  { path = "pretrained_models/DeepFilterNet2/checkpoints/*" },
]

[tool.poetry.dependencies]
deepfilterlib = { path = "../pyDF/" }
deepfilterdataloader = { path = "../pyDF-data/", optional = true }
python = ">=3.10,<4.0"
numpy = ">=1.26.4"
loguru = ">=0.5"
appdirs = "^1.4"
requests = "^2.27"
packaging = ">=23"
sympy = ">=1.6"
soundfile = { version = ">=0.10,<0.13", optional = true }
icecream = { version = ">=2,<3", optional = true }
pystoi = { version = ">=0.3,<0.5", optional = true }
pesq = { version = ">=0.0.3,<0.0.5", optional = true }
scipy = { version = "^1", optional = true }
onnxruntime = { version = "^1.15", optional = true }

[tool.poetry.extras]
train = ["deepfilterdataloader", "icecream"]
eval = ["pystoi", "pesq", "scipy"]
soundfile = ["soundfile"]
dnsmos-local = ["onnxruntime"]

[tool.poetry.scripts]
deepFilter = "df.enhance:run"
deep-filter-py = "df.enhance:run"

[tool.poetry.dev-dependencies]
poethepoet = "^0.26"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true
known_first_party = ["df", "libdf", "libdfdata"]

